--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,31 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rocketseat/unform": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "history": "^4.10.1",
+    "immer": "^5.3.4",
+    "polished": "^3.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-icons": "^3.9.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
+    "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.2",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "yup": "^0.28.1",
-    "axios": "^0.19.2",
-    "immer": "^5.3.4",
-    "reactotron-react-js": "^3.3.7",
     "styled-components": "^5.0.0",
-    "react-icons": "^3.9.0",
-    "react-router-dom": "^5.1.2",
-    "bootstrap": "^4.4.1",
-    "history": "^4.10.1",
-    "polished": "^3.4.4",
-    "@rocketseat/unform": "^1.6.1",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
