--- a/mobile/app.json
+++ b/mobile/app.json
@@ -4,7 +4,7 @@
     "slug": "bethehero",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": ["ios", "android", "web"],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,7 +18,12 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.Rocket.BeTheHeros"
+    },
+    "android": {
+      "package": "com.Rocket.BeTheHeros",
+      "versionCode": 1
     }
   }
 }
